--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,21 @@ body {
 	padding: 0 10px;
 }
 
+.title {
+	font-family: "spaceagecyrillic";
+	padding: 100px 0;
+	font-size: 48px;
+	line-height: 48px;
+	font-weight: 400;
+}
+
+.button {
+	text-transform: uppercase;
+	border: 1px solid #fff;
+	font-size: 18px;
+	line-height: 21px;
+	padding: 15px 45px;
+}
 .header {
 	background-image: url(../images/header-bg.jpg);
 
@@ -185,4 +200,112 @@ body {
 
 .header__description-text + .header__description-text {
 	margin-left: 52px;
+}
+
+.about {
+	background-image: url(../images/about-bg.jpg);
+	background-position: top center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.about__item {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding-bottom: 150px;
+}
+
+.about__item:nth-child(odd) {
+	flex-direction: row-reverse;
+}
+
+.about__img {
+	max-width: 100%;
+}
+
+.about__content {
+	width: 600px;
+}
+.about__content-title {
+	font-size: 30px;
+	line-height: 36px;
+	font-weight: 700;
+	margin-bottom: 5px;
+}
+
+.about__content-subtitle {
+	font-size: 12px;
+	line-height: 14px;
+	font-weight: 400;
+	color: #036cca;
+	margin-bottom: 30px;
+	text-transform: uppercase;
+}
+
+.about__content-text {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 50px;
+}
+
+.about__content-text p {
+	width: 165px;
+}
+
+.about__table {
+	margin-bottom: 50px;
+}
+
+.about__table-caption {
+	caption-side: bottom;
+	text-align: left;
+	margin-top: 20px;
+	font-size: 12px;
+	line-height: 14px;
+}
+
+.about__table-tr {
+	border: 1px solid #fff;
+	border-left: none;
+	border-right: none;
+}
+
+.about__table-tr + .about__table-tr {
+	font-size: 36px;
+	line-height: 43px;
+	font-weight: bold;
+	text-align: center;
+}
+
+.about__table-td {
+	padding: 10px 30px 10px 0;
+}
+
+.about__table-td span {
+	font-size: 14px;
+	line-height: 17px;
+	display: block;
+}
+
+.how-to {
+	background-image: url(../images/hovto-bg.jpg);
+	background-position: top center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding-bottom: 100px;
+}
+
+.how-to__box {
+	text-align: center;
+}
+
+.how-to__box circle {
+	transition: all 0.5s;
+	cursor: pointer;
+}
+
+.how-to__box circle:hover {
+	r: 20px;
+	fill: #036cca;
 }
