--- a/css/style.css
+++ b/css/style.css
@@ -365,3 +365,62 @@ foreignObject {
 	background-position: top center;
 	padding-bottom: 100px;
 }
+
+.speciol-offer__inner {
+	display: flex;
+	justify-content: space-between;
+}
+
+.speciol-offer__item {
+	width: 500px;
+}
+
+.speciol-offer__item-box {
+	margin-bottom: 25px;
+	border: solid 1px #fff;
+	padding: 40px 75px;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	/* align-items: center; */
+	min-height: 400px;
+}
+
+.speciol-offer__item-text {
+	font-size: 24px;
+	line-height: 29px;
+	width: 236px;
+	margin: 0 auto;
+}
+.speciol-offer__item-text span {
+	color: #cb0e0e;
+}
+
+.speciol-offer__old-price {
+	font-size: 14px;
+	line-height: 17px;
+	text-align: right;
+	margin-bottom: 16px;
+	position: relative;
+}
+
+.speciol-offer__old-price::before {
+	content: "";
+	position: absolute;
+	width: 68px;
+	height: 1px;
+	background-color: #cb0e0e;
+	top: 7px;
+	right: 0;
+	transform: rotate(15deg);
+}
+
+.speciol-offer__new-price {
+	font-size: 48px;
+	line-height: 57px;
+}
+
+.speciol-offer__btn {
+	width: 100%;
+}
