--- a/css/style.css
+++ b/css/style.css
@@ -525,6 +525,7 @@ foreignObject {
 
 .contacts {
 	background-color: #010203;
+	padding-bottom:100px;
 }
 
 .contacts__inner {
@@ -556,6 +557,7 @@ foreignObject {
 	font-size: 14px;
 	line-height: 17px;
 	padding: 20px 0;
+	width:100%;
 }
 
 .contacts__form-input::placeholder {
@@ -565,6 +567,25 @@ foreignObject {
 	line-height: 17px;
 }
 
-.contacts__guarantees {
-	width: 600px;
+
+.contacts__btn{
+	margin-top:70px;
+	width:100%;
+}
+
+
+.contacts__guarantees{
+	width:600px;
+}
+
+.contacts__guarantees-text{
+	font-size:24px;
+	line-height:29px;
+
+}
+
+.contacts__guarantees-img{
+display:flex;
+justify-content:flex-end;
+margin-left:auto;
 }
