--- a/css/style.css
+++ b/css/style.css
@@ -473,7 +473,7 @@ foreignObject {
 	width: 100%;
 }
 
-.services__btn__first {
+.services__btn-first {
 	margin-bottom: 50px;
 	position: relative;
 }
