--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,7 @@ foreignObject {
 
 .contacts {
 	background-color: #010203;
-	padding-bottom:100px;
+	padding-bottom: 100px;
 }
 
 .contacts__inner {
@@ -557,7 +557,7 @@ foreignObject {
 	font-size: 14px;
 	line-height: 17px;
 	padding: 20px 0;
-	width:100%;
+	width: 100%;
 }
 
 .contacts__form-input::placeholder {
@@ -567,25 +567,75 @@ foreignObject {
 	line-height: 17px;
 }
 
-
-.contacts__btn{
-	margin-top:70px;
-	width:100%;
+.contacts__btn {
+	margin-top: 70px;
+	width: 100%;
 }
 
-
-.contacts__guarantees{
-	width:600px;
+.contacts__guarantees {
+	width: 600px;
 }
 
-.contacts__guarantees-text{
-	font-size:24px;
-	line-height:29px;
-
+.contacts__guarantees-text {
+	font-size: 24px;
+	line-height: 29px;
 }
 
-.contacts__guarantees-img{
-display:flex;
-justify-content:flex-end;
-margin-left:auto;
+.contacts__guarantees-img {
+	display: flex;
+	justify-content: flex-end;
+	margin-left: auto;
+}
+
+.footer {
+	background-image: url(../images/footer-bg.jpg);
+	background-position: top center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	padding: 100px 0 151px 0;
+}
+.footer__inner {
+	display: flex;
+	justify-content: flex-end;
+	width: 100%;
+}
+
+.footer__text {
+	width: 165px;
+	margin-right: 50px;
+}
+
+.footer__text p + p {
+	margin-top: 50px;
+}
+
+.footer__menu {
+	margin-right: 95px;
+	list-style: none;
+	width: 120px;
+}
+
+.footer__links {
+	width: 165px;
+	list-style: none;
+}
+
+.footer__menu-item,
+.footer__links-item {
+	margin-bottom: 20px;
+}
+
+.footer__menu-item:last-child,
+.footer__links-item:last-child {
+	margin-bottom: 0;
+}
+
+.footer__menu-link,
+.footer__links-link {
+	text-transform: uppercase;
+	transition: color 0.5s;
+}
+.footer__menu-link:hover,
+.footer__links-link:hover {
+	color: #cb0e0e;
 }
